create package, add content to readme

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,19 @@
 Package: zueriverse
-Title: What the Package Does (One Line, Title Case)
+Title: dummy package to gather the documentation about zueriverse packages
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    c(
+    person("Alessandro",
+      "Feller",
+      role = c("aut", "cre"),
+      email = "alessandro.feller@zuerich.ch"),
+    person("Sara", "Hänzi", role = c("aut", "cre"), email = "sara.haenzi@zuerich.ch"),
+    person("Statistik Stadt Zürich",
+      email = "statistik@zuerich.ch",
+      role = c("cph", "fnd")
+    ))
+Description: Package without exported functionality, created for documentation purposes, gathering all information about zueriverse packages in one place.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
