--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,4 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+URL: https://statistikstadtzuerich.github.io/zueriverse/, https://github.com/StatistikStadtZuerich/zueriverse
